--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.15.1",
     "gsap": "^3.7.1",
     "locomotive-scroll": "^4.1.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "nuxt-video-player": "^1.0.17"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
