--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js"
   },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "post": "8000"
+    }
+  },
   "dependencies": {
     "core-js": "^3.15.1",
     "gsap": "^3.7.1",
